--- a/.github/workflows/updateIndex.yaml
+++ b/.github/workflows/updateIndex.yaml
@@ -9,6 +9,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
+
+    permissions:
+      contents: read
+      packages: write
+    
     steps:
       - name: Git Checkout
         uses: actions/checkout@v2
