--- a/.github/workflows/updateIndex.yaml
+++ b/.github/workflows/updateIndex.yaml
@@ -26,7 +26,7 @@ jobs:
           helm repo index .
           git config --global user.email "bot@braingohurty.co.uk"
           git config --global user.name "Repo Bot"
-          git pull
+          git merge origin/main
           git add index.yaml
           git commit -m "Update chart index"
           git push
